--- a/esprit-woo/src/style.css
+++ b/esprit-woo/src/style.css
@@ -1,56 +1,56 @@
-.confirmation-modal {
-  position: fixed;
-  top: 0;
-  left: 0;
+.esprit-container {
+  width: 100%;
+  height: 100%;
+}
+
+.esprit-container-container {
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 9999;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 12px;
+  padding-right: 16px;
+  border-radius: 12px;
+  background-color: #dbd2ef;
 }
 
-.modal-content {
+.esprit-qrcode {
+  width: 37%;
+}
+
+.esprit-text-container {
+  width: 63%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 4px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
-
-.confirm-button {
-  width: 50%;
-  background-color: rgb(104, 104, 255);
-  color: white;
-  border: 0px solid white;
-  font-size: 16px;
-  border-radius: 4px;
-  padding: 12px 16px;
-}
-
-.esprit-qrcode {
-  width: 40%;
-}
-
-.esprit-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-}
-
-.esprit-text-container {
-  margin-left: 10px;
+  padding-left: 16px;
 }
 
 .esprit-text-one {
   font-weight: bold;
   font-size: 16px;
+  color: #595678;
 }
 
-/* .esprit-text-two {
-} */
+.esprit-text-two {
+  color: #595678;
+}
+
+.esprit-processing-container {
+  padding: 16px;
+  background-color: #dbd2ef;
+  border-radius: 12px;
+}
+
+.esprit-processing-one {
+  color: #595678;
+  font-size: 20px;
+  font-weight: bold;
+}
+.esprit-processing-two {
+  color: #595678;
+}
